--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,29 +5,32 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app/server.js",
+    "test": "mocha src/tests/**/*$NAME*.test.js --exit"
   },
   "keywords": [],
   "author": "Emerson Moreira",
   "license": "ISC",
   "dependencies": {
-    "eslint-config-trybe-backend": "1.0.3",
     "dotenv": "^16.0.1",
+    "eslint-config-trybe-backend": "1.0.3",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.21.0"
+    "sequelize": "^6.21.0",
+    "sequelize-test-helpers": "^1.4.2"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
     "jest": "26.0.1",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.18",
     "sequelize-cli": "^6.4.1",
-    "supertest": "4.0.2",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "sinon": "^14.0.0"
+    "sinon": "^14.0.0",
+    "supertest": "4.0.2"
   }
 }
