--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app/server.js",
-    "start": "node src/app/server.js",
-    "test": "mocha src/tests/**/*$NAME*.test.js --exit"
+    "dev": "nodemon src/api/server.js",
+    "start": "node src/api/server.js",
+    "test": "mocha src/test/**/*$NAME*.test.js --exit",
+    "test:coverage": "nyc mocha --all --include models --include services --include controllers src/test/**/*.test.js --exit"
   },
   "keywords": [],
   "author": "Emerson Moreira",
@@ -29,6 +30,7 @@
     "jest": "26.0.1",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.18",
+    "nyc": "^15.1.0",
     "sequelize-cli": "^6.4.1",
     "sinon": "^14.0.0",
     "supertest": "4.0.2"
