--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -22,3 +22,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.nyc_output/**
+.nyc_output/*.json
+.nyc_output/processinfo/*.json
+.nyc_output/processinfo/index.json
