--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,12 +2,14 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/api/server.js",
+    "restore": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node src/api/server.js",
     "test": "mocha src/tests/**/*$NAME*.test.js --exit",
-    "test:coverage": "nyc mocha --all --include models --include services --include controllers src/tests/**/*.test.js --exit"
+    "test:coverage": "nyc mocha --all --include models --include services --include controllers src/tests/**/*.test.js --exit",
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
   "author": "Emerson Moreira",
