--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/api/server.js",
-    "restore": "cross-env NODE_ENV=development npx sequelize-cli db:create && npx sequelize-cli db:migrate",
+    "dev": "cross-env NODE_ENV=development nodemon src/api/server.js",
+    "drop": "cross-env NODE_ENV=development npx sequelize-cli db:drop",
+    "restore": "cross-env NODE_ENV=development npx sequelize-cli db:create && NODE_ENV=development npx sequelize-cli db:migrate",
     "start": "node src/api/server.js",
     "pretest": "cross-env NODE_ENV=test npx sequelize-cli db:create && cross-env NODE_ENV=test npx sequelize-cli db:migrate",
     "test": "cross-env NODE_ENV=test mocha src/tests/**/*$NAME*.test.js --exit",
-    "test:coverage": "npm run pretest && cross-env NODE_ENV=test nyc mocha src/tests/**/*.test.js --exit",
+    "test:coverage": "npm run pretest && cross-env NODE_ENV=test nyc mocha src/tests/**/*$NAME*.test.js --exit",
     "posttest": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
@@ -17,10 +18,13 @@
   "author": "Emerson Moreira",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0",
     "sequelize-test-helpers": "^1.4.2"
