--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -23,6 +23,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+.nyc_output/
 .nyc_output/**
 .nyc_output/*.json
 .nyc_output/processinfo/*.json
