--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/api/server.js",
-    "drop": "cross-env NODE_ENV=development npx sequelize-cli db:drop",
-    "restore": "cross-env NODE_ENV=development npx sequelize-cli db:create && NODE_ENV=development npx sequelize-cli db:migrate",
-    "start": "node src/api/server.js",
-    "pretest": "cross-env NODE_ENV=test npx sequelize-cli db:create && cross-env NODE_ENV=test npx sequelize-cli db:migrate",
-    "test": "cross-env NODE_ENV=test mocha src/tests/**/*$NAME*.test.js --exit",
-    "test:coverage": "npm run pretest && cross-env NODE_ENV=test nyc mocha src/tests/**/*$NAME*.test.js --exit",
-    "posttest": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
+    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
+    "start": "node src/api/server.js",    
+    "drop": "npx sequelize-cli db:drop",
+    "seed": "npx sequelize-cli db:seed:all",
+    "pretest": "npm run drop && npm run prestart && npm run seed",
+    "test": "jest -i --verbose --forceExit",    
+    "test-coverage": "npm run pretest && jest -i --verbose --forceExit --coverage",
+    "dev": "nodemon src/api/server.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
@@ -20,7 +20,6 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "^4.18.1",
@@ -31,18 +30,14 @@
     "sequelize-test-helpers": "^1.4.2"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
-    "jest": "26.0.1",
-    "mocha": "^10.0.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.18",
     "nyc": "^15.1.0",
     "sequelize-cli": "^6.4.1",
-    "sinon": "^14.0.0",
-    "supertest": "4.0.2"
+    "supertest": "^4.0.2"
   }
 }
