chore: package.json
cria novo package.json com script para insalar as dependecias das duas aplicação

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install:apps": "./apps_install.sh"
+    "database": "cd back-end && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "preinstall": "(cd back-end && npm install); (cd front-end && npm install)",
+    "install:apps": "(cd back-end && npm install); (cd front-end && npm install)"
   },
   "repository": {
     "type": "git",
