--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,7 +22,8 @@
     "eslint-config-trybe-frontend": "1.2.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "^13.8.0",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^4.1.0",
+    "@sheerun/mutationobserver-shim": "0.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
