--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "database": "npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "start": "node src/api/server.js",    
+    "start": "node src/api/server.js",
     "drop": "npx sequelize-cli db:drop",
     "seed": "npx sequelize-cli db:seed:all",
     "pretest": "npm run drop && npm run prestart && npm run seed",
-    "test": "jest -i --verbose --forceExit",    
+    "test": "jest -i --verbose --forceExit",
     "test-coverage": "npm run pretest && jest -i --verbose --forceExit --coverage",
     "dev": "nodemon src/api/server.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
@@ -31,14 +31,18 @@
     "sequelize-test-helpers": "^1.4.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.11.19",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
     "eslint-plugin-import": "2.22.1",
     "frisby": "2.1.2",
     "jest": "^26.0.1",
-    "nodemon": "^2.0.18",
+    "nodemon": "^2.0.20",
     "nyc": "^15.1.0",
     "sequelize-cli": "^6.4.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
