--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,7 +12,7 @@
     "pretest": "npm run drop && npm run prestart && npm run seed",
     "test": "jest -i --verbose --forceExit",
     "test-coverage": "npm run pretest && jest -i --verbose --forceExit --coverage",
-    "dev": "nodemon src/api/server.js",
+    "dev": "nodemon src/api/server.ts",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
@@ -31,6 +31,7 @@
     "sequelize-test-helpers": "^1.4.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.19",
     "eslint": "6.8.0",
