--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,8 +9,7 @@
     "start": "node src/api/server.js",
     "drop": "npx sequelize-cli db:drop",
     "seed": "npx sequelize-cli db:seed:all",
-    "pretest": "npm run drop && npm run prestart && npm run seed",
-    "test": "jest -i --verbose --forceExit",
+    "test": "jest",
     "test-coverage": "npm run pretest && jest -i --verbose --forceExit --coverage",
     "dev": "nodemon src/api/server.ts",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.19",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
@@ -43,6 +43,7 @@
     "nyc": "^15.1.0",
     "sequelize-cli": "^6.4.1",
     "supertest": "^4.0.2",
+    "ts-jest": "^26.5.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
