--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
   "author": "Emerson Moreira",
   "license": "ISC",
   "dependencies": {
+    "@types/validator": "^13.7.12",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -27,7 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0",
-    "sequelize-test-helpers": "^1.4.2"
+    "sequelize-test-helpers": "^1.4.2",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
