--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/validator": "^13.7.12",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "eslint-config-trybe-backend": "1.0.3",
@@ -32,6 +32,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
