--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,16 +26,19 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^5.0.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0",
     "sequelize-test-helpers": "^1.4.2",
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.6",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.19",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
