--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,7 @@
     "seed": "npx sequelize-cli db:seed:all",
     "test": "jest --watch",
     "test-coverage": "npm run pretest && jest -i --verbose --forceExit --coverage",
-    "dev": "nodemon src/api/server.ts",
+    "dev": "nodemon --watch '**/*.ts' --exec 'ts-node' src/main/server.ts",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
@@ -26,8 +26,8 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
     "mongodb": "^4.1.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.21.0",
     "sequelize-test-helpers": "^1.4.2",
     "validator": "^13.9.0"
