--- a/back-end/package.json
+++ b/back-end/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.1",
     "eslint-config-trybe-backend": "1.0.3",
     "express": "^4.18.1",
+    "fast-glob": "^3.2.12",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
