--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,43 +2,30 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/main.js",
   "scripts": {
-    "database": "npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
-    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
-    "start": "node src/api/server.js",    
-    "drop": "npx sequelize-cli db:drop",
-    "seed": "npx sequelize-cli db:seed:all",
-    "pretest": "npm run drop && npm run prestart && npm run seed",
-    "test": "jest -i --verbose --forceExit",    
-    "test-coverage": "npm run pretest && jest -i --verbose --forceExit --coverage",
-    "dev": "nodemon src/api/server.js",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
+    "start": "node dist/main.js",
+    "dev": "nodemon src/main.js"
   },
   "keywords": [],
   "author": "Emerson Moreira",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "eslint-config-trybe-backend": "1.0.3",
-    "express": "^4.18.1",
-    "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.21.0",
-    "sequelize-test-helpers": "^1.4.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "frisby": "2.1.2",
-    "jest": "^26.0.1",
-    "nodemon": "^2.0.18",
-    "nyc": "^15.1.0",
-    "sequelize-cli": "^6.4.1",
-    "supertest": "^4.0.2"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.3.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
