--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "start": "node dist/main.js",
-    "dev": "nodemon src/main.js"
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/main.ts",
+    "start": "node dist/main.js"
   },
   "keywords": [],
   "author": "Emerson Moreira",
@@ -25,6 +26,8 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.2",
+    "nodemon": "^2.0.22",
+    "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
