--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
