--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/main.ts",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "dev:seed": "ts-node ./prisma/seeds.ts"
   },
   "keywords": [],
   "author": "Emerson Moreira",
