--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,58 +1,37 @@
 {
-  "name": "frot-end",
+  "name": "front-end",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "eslint-plugin-sonarjs": "^0.11.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.5",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "eslint": "7.11.0",
-    "eslint-config-trybe-frontend": "1.2.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "^13.8.0",
-    "stylelint-order": "^4.1.0",
-    "@sheerun/mutationobserver-shim": "0.3.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "test:coverage": "CI=true npm test -- --env=jsdom --coverage",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx",
-    "lint:styles": "npx stylelint '**/*.css'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@types/axios": "^0.14.0",
+    "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "20.4.0",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@types/yup": "^0.32.0",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "cookie": "^0.5.0",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "formik": "^2.4.2",
+    "js-cookie": "^3.0.5",
+    "next": "13.4.9",
+    "postcss": "8.4.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swr": "^2.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   }
 }
