--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/main.ts",
     "start": "node dist/main.js",
+    "database": "npx prisma generate && npx prisma migrate dev --name init",
     "dev:seed": "ts-node ./prisma/seeds.ts"
   },
   "keywords": [],
