--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
@@ -26,6 +27,7 @@
     "formik": "^2.4.2",
     "js-cookie": "^3.0.5",
     "next": "13.4.9",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
